<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/main"
        android:background="@color/blue_accent">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/na"
            android:id="@+id/iconImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" android:layout_marginBottom="120dp"/>
    <TextView
            android:text="@string/Date_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/DescripcionTextView"
            app:layout_constraintTop_toBottomOf="@+id/iconImageView"
            android:layout_marginTop="8dp"
            tools:text="Clear Day"
            android:textSize="24sp" android:textAlignment="center"
    />
    <TextView
            android:text="@string/City"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/locazationTextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/iconImageView"
            android:textSize="24sp"
            android:textAlignment="center"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content"
                                          android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/grade_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tempTextView" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/DescripcionTextView"
            app:layout_constraintHorizontal_bias="0.488" android:textAlignment="center" tools:text="24 C"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/percentage_humidity_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/precipTextView" app:layout_constraintStart_toEndOf="@+id/tempTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/DescripcionTextView"
            app:layout_constraintHorizontal_bias="0.492" android:textSize="24sp" android:textAlignment="center"
            tools:text="23.4 %"/>
    <TextView
            android:text="@string/text_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tempTextView"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.487" android:textAlignment="center"/>
    <TextView
            android:text="@string/text_precip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/precipTextView"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
    <Button
            android:text="@string/text_daily_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/DailyWeatherButton"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginBottom="10dp"/>
    <Button
            android:text="@string/text_hourly_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hourlyWeatherButton" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless"
            android:textStyle="bold" android:textAlignment="center" android:layout_marginBottom="10dp"/>
</android.support.constraint.ConstraintLayout>