<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_accent"
        tools:context=".HourlyWeatherActivity">

    <TextView
            android:text="@string/summary_of_the_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/titleHourlyWeatherTextView"
            app:layout_constraintEnd_toEndOf="@+id/titleHourlyWeatherTextView"
            android:id="@+id/textView2" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/titleHourlyWeatherTextView" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/text_hourly_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleHourlyWeatherTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp" android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.541" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textStyle="bold"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp" android:id="@+id/HourlyRecyclerView"/>
    <TextView
            android:text="@string/No_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emptyTextView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>