<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_accent"
        tools:context=".DailyWeatherActivity">

    <TextView
            android:text="@string/text_daily_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TittleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textAlignment="center"/>
    <TextView
            android:text="@string/summary_of_the_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTittleTextView" app:layout_constraintStart_toStartOf="@+id/TittleTextView"
            app:layout_constraintEnd_toEndOf="@+id/TittleTextView" app:layout_constraintTop_toBottomOf="@+id/TittleTextView"
            android:layout_marginTop="8dp" android:textSize="18sp" android:textAlignment="center"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTittleTextView"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintVertical_bias="0.515"
            android:layout_margin="8sp"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" android:id="@+id/dailyListView"/>
    <TextView
            android:text="@string/No_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EmptyTextView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>